@@ -12,7 +12,6 @@ import org.neoflex.deal.client.calculator.CalculatorClientService;
 import org.neoflex.deal.dto.LoanOfferDto;
 import org.neoflex.deal.dto.LoanStatementRequestDto;
 import org.neoflex.deal.mapper.ClientMapper;
-import org.neoflex.deal.mapper.StatementMapper;
 import org.neoflex.deal.model.Client;
 import org.neoflex.deal.model.Statement;
 import org.neoflex.deal.model.enums.ApplicationStatus;
@@ -29,9 +28,17 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.when;
 
 @DisplayName("Тесты сервиса StatementService")
 @ExtendWith(MockitoExtension.class)
@@ -48,9 +55,6 @@ class StatementServiceTest {
 
     @Mock
     private ClientMapper clientMapper;
-
-    @Mock
-    private StatementMapper statementMapper;
 
     @InjectMocks
     private StatementService statementService;
@@ -128,9 +132,8 @@ class StatementServiceTest {
     @DisplayName("Успешный расчет возможных условий кредита при корректных данных клиента")
     void whenClientDataIsValidThenReturnFourLoanOffersWithStatementId() {
         when(clientMapper.toClient(loanStatementRequest)).thenReturn(testClient);
-        when(clientRepository.save(any(Client.class))).thenReturn(testClient);
-        when(statementMapper.toStatement(testClient)).thenReturn(testStatement);
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(clientRepository.save(any())).thenReturn(testClient);
+        when(statementRepository.save(any())).thenReturn(testStatement);
         when(calculatorClientService.calculateLoanOffers(loanStatementRequest)).thenReturn(mockOffers);
 
         List<LoanOfferDto> result = statementService.calculationOfPossibleLoanTerms(loanStatementRequest);
@@ -142,9 +145,9 @@ class StatementServiceTest {
                 assertEquals(testStatement.getStatementId(), offer.getStatementId())
         );
 
-        verify(clientRepository, times(1)).save(any(Client.class));
-        verify(statementRepository, times(1)).save(any(Statement.class));
-        verify(calculatorClientService, times(1)).calculateLoanOffers(loanStatementRequest);
+        verify(clientRepository).save(any());
+        verify(statementRepository).save(any());
+        verify(calculatorClientService).calculateLoanOffers(loanStatementRequest);
     }
 
     @Test
@@ -158,12 +161,12 @@ class StatementServiceTest {
     @DisplayName("При сохранении клиента выбрасывается исключение")
     void whenSavingClientFailsThenThrowException() {
         when(clientMapper.toClient(loanStatementRequest)).thenReturn(testClient);
-        when(clientRepository.save(any(Client.class))).thenThrow(new RuntimeException("Database error"));
+        when(clientRepository.save(any())).thenThrow(new RuntimeException("Database error"));
 
         assertThrows(RuntimeException.class,
                 () -> statementService.calculationOfPossibleLoanTerms(loanStatementRequest));
 
-        verify(statementRepository, never()).save(any(Statement.class));
+        verifyNoInteractions(statementRepository);
     }
 
     @Test
@@ -171,7 +174,7 @@ class StatementServiceTest {
     void whenLoanOfferSelectedThenStatementUpdated() {
         when(statementRepository.findById(loanOfferRequest.getStatementId()))
                 .thenReturn(Optional.of(testStatement));
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(statementRepository.save(any())).thenReturn(testStatement);
 
         statementService.choosingOneOfTheLoanOffers(loanOfferRequest);
 
@@ -181,12 +184,12 @@ class StatementServiceTest {
         assertNotNull(testStatement.getStatusHistory());
         assertEquals(1, testStatement.getStatusHistory().size());
 
-        StatusHistory history = testStatement.getStatusHistory().get(0);
+        StatusHistory history = testStatement.getStatusHistory().getFirst();
         assertEquals(ApplicationStatus.APPROVED, history.getStatus());
         assertEquals(ChangeType.AUTOMATIC, history.getChangeType());
         assertNotNull(history.getTime());
 
-        verify(statementRepository, times(1)).save(testStatement);
+        verify(statementRepository).save(testStatement);
     }
 
     @Test
@@ -200,7 +203,7 @@ class StatementServiceTest {
                 () -> statementService.choosingOneOfTheLoanOffers(loanOfferRequest));
 
         assertTrue(exception.getMessage().contains(nonExistentId.toString()));
-        verify(statementRepository, never()).save(any(Statement.class));
+        verify(statementRepository, never()).save(any());
     }
 
     @Test
@@ -218,47 +221,49 @@ class StatementServiceTest {
 
         when(statementRepository.findById(loanOfferRequest.getStatementId()))
                 .thenReturn(Optional.of(testStatement));
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(statementRepository.save(any())).thenReturn(testStatement);
 
         statementService.choosingOneOfTheLoanOffers(loanOfferRequest);
 
         assertEquals(1, testStatement.getStatusHistory().size());
-        assertEquals(ApplicationStatus.APPROVED, testStatement.getStatusHistory().get(0).getStatus());
+        assertEquals(ApplicationStatus.APPROVED, testStatement.getStatusHistory().getFirst().getStatus());
     }
 
     @Test
     @DisplayName("Успешное создание клиента из LoanStatementRequestDto")
     void whenClientMapperCalledThenClientIsCreated() {
         when(clientMapper.toClient(loanStatementRequest)).thenReturn(testClient);
-        when(clientRepository.save(any(Client.class))).thenReturn(testClient);
-        when(statementMapper.toStatement(testClient)).thenReturn(testStatement);
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(clientRepository.save(any())).thenReturn(testClient);
+        when(statementRepository.save(any())).thenReturn(testStatement);
         when(calculatorClientService.calculateLoanOffers(loanStatementRequest)).thenReturn(mockOffers);
 
         List<LoanOfferDto> result = statementService.calculationOfPossibleLoanTerms(loanStatementRequest);
 
         assertNotNull(result);
-        verify(clientMapper, times(1)).toClient(loanStatementRequest);
-        verify(clientRepository, times(1)).save(any(Client.class));
-        verify(statementMapper, times(1)).toStatement(testClient);
-        verify(statementRepository, times(1)).save(any(Statement.class));
+        verify(clientMapper).toClient(loanStatementRequest);
+        verify(clientRepository).save(any());
+        verify(statementRepository).save(any());
     }
 
     @Test
     @DisplayName("Проверка что все 4 кредитных предложения получают одинаковый statementId")
     void whenLoanOffersGeneratedThenAllHaveSameStatementId() {
         when(clientMapper.toClient(loanStatementRequest)).thenReturn(testClient);
-        when(clientRepository.save(any(Client.class))).thenReturn(testClient);
-        when(statementMapper.toStatement(testClient)).thenReturn(testStatement);
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(clientRepository.save(any())).thenReturn(testClient);
+        when(statementRepository.save(any())).thenReturn(testStatement);
         when(calculatorClientService.calculateLoanOffers(loanStatementRequest)).thenReturn(mockOffers);
 
         List<LoanOfferDto> result = statementService.calculationOfPossibleLoanTerms(loanStatementRequest);
 
-        UUID firstStatementId = result.get(0).getStatementId();
+        UUID firstStatementId = result.getFirst().getStatementId();
         for (LoanOfferDto offer : result) {
             assertEquals(firstStatementId, offer.getStatementId());
         }
+
+        verify(clientMapper).toClient(loanStatementRequest);
+        verify(clientRepository).save(any());
+        verify(statementRepository).save(any());
+        verify(calculatorClientService).calculateLoanOffers(loanStatementRequest);
     }
 
     @Test
@@ -267,7 +272,7 @@ class StatementServiceTest {
         testStatement.setStatus(ApplicationStatus.PREAPPROVAL);
         when(statementRepository.findById(loanOfferRequest.getStatementId()))
                 .thenReturn(Optional.of(testStatement));
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(statementRepository.save(any())).thenReturn(testStatement);
 
         statementService.choosingOneOfTheLoanOffers(loanOfferRequest);
 
@@ -280,16 +285,13 @@ class StatementServiceTest {
     void whenLoanOfferSelectedThenAppliedOfferIsSet() {
         when(statementRepository.findById(loanOfferRequest.getStatementId()))
                 .thenReturn(Optional.of(testStatement));
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(statementRepository.save(any())).thenReturn(testStatement);
 
         statementService.choosingOneOfTheLoanOffers(loanOfferRequest);
 
-        assertNotNull(testStatement.getAppliedOffer());
-        assertEquals(loanOfferRequest.getRequestedAmount(), testStatement.getAppliedOffer().getRequestedAmount());
-        assertEquals(loanOfferRequest.getTerm(), testStatement.getAppliedOffer().getTerm());
-        assertEquals(loanOfferRequest.getRate(), testStatement.getAppliedOffer().getRate());
-        assertEquals(loanOfferRequest.getIsInsuranceEnabled(), testStatement.getAppliedOffer().getIsInsuranceEnabled());
-        assertEquals(loanOfferRequest.getIsSalaryClient(), testStatement.getAppliedOffer().getIsSalaryClient());
+        assertThat(testStatement.getAppliedOffer())
+                .usingRecursiveComparison()
+                .isEqualTo(loanOfferRequest);
     }
 
     @Test
@@ -297,11 +299,11 @@ class StatementServiceTest {
     void whenLoanOfferSelectedThenStatusChangeTimeIsNotNull() {
         when(statementRepository.findById(loanOfferRequest.getStatementId()))
                 .thenReturn(Optional.of(testStatement));
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(statementRepository.save(any())).thenReturn(testStatement);
 
         statementService.choosingOneOfTheLoanOffers(loanOfferRequest);
 
-        StatusHistory history = testStatement.getStatusHistory().get(0);
+        StatusHistory history = testStatement.getStatusHistory().getFirst();
         assertNotNull(history.getTime());
     }
 
@@ -309,15 +311,18 @@ class StatementServiceTest {
     @DisplayName("Проверка что при создании заявки поле creationDate заполняется")
     void whenStatementCreatedThenCreationDateIsSet() {
         when(clientMapper.toClient(loanStatementRequest)).thenReturn(testClient);
-        when(clientRepository.save(any(Client.class))).thenReturn(testClient);
-        when(statementMapper.toStatement(testClient)).thenReturn(testStatement);
-        when(statementRepository.save(any(Statement.class))).thenReturn(testStatement);
+        when(clientRepository.save(any())).thenReturn(testClient);
+        when(statementRepository.save(any())).thenReturn(testStatement);
         when(calculatorClientService.calculateLoanOffers(loanStatementRequest)).thenReturn(mockOffers);
 
         List<LoanOfferDto> result = statementService.calculationOfPossibleLoanTerms(loanStatementRequest);
 
         assertNotNull(result);
-        verify(statementRepository, times(1)).save(any(Statement.class));
         assertNotNull(testStatement.getCreationDate());
+
+        verify(clientMapper).toClient(loanStatementRequest);
+        verify(clientRepository).save(any());
+        verify(statementRepository).save(any());
+        verify(calculatorClientService).calculateLoanOffers(loanStatementRequest);
     }
 }
